# billiam-database

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yaml
billiam_database/: config.yaml
billiam_database/models/domain/career/: working_hours.sql
billiam_database/models/raw/: amex_transactions.sql  counterparty_exclusions.sql  finances.sql  work_absences.sql  work_hours.sql
dockerfiles/: metaduck.Dockerfile
testing/: setup.py
