[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "billiam-database"
version = "0.0.0"
description = "OLAP database project for life admin."
authors = [{name = "billwallis"}]
readme = "README.md"
keywords = ["sql", "sqlmesh", "duckdb"]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "poethepoet>=0.37.0",
    "python-dotenv[cli]>=1.1.0",
    "sqlmesh>=0.171.0",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "db-query-profiler>=0.0.6",
    "pre-commit>=4.1.0",
    "sqlmesh[web]",
]


[tool.setuptools.packages.find]
include = ["billiam_database"]


[tool.poe]
verbosity = -1

[tool.poe.tasks]
install.shell = """
    uv sync --refresh
    pre-commit install --install-hooks
"""
lint.shell = """
    echo '=== pre-commit checks ==='
    SKIP=identity pre-commit run --all-files --hook-stage pre-commit
    echo '=== pre-push checks ==='
    pre-commit run --all-files --hook-stage pre-push
"""
update.shell = """
    uv sync --refresh --upgrade
    pre-commit autoupdate
    pre-commit install --install-hooks
    sqlmesh -p billiam_database migrate
"""

# SQLMesh wrappers (`cmd` rather than `shell` for colour output)
clean = [
    {cmd = "sqlmesh -p billiam_database clean"},
    {cmd = "sqlmesh -p billiam_database janitor"},
]
debug = [
    {cmd = "sqlmesh -p billiam_database info"},
    {cmd = "sqlmesh -p billiam_database check_intervals"},
]

render = "sqlmesh -p billiam_database render"
test = "sqlmesh -p billiam_database test -vv"

plan = "sqlmesh -p billiam_database plan"
run = "sqlmesh -p billiam_database run"
audit = "sqlmesh -p billiam_database audit"

sqlmesh = "sqlmesh -p billiam_database"
